# rust-local

./: Dockerfile  README.md  build.sh
.github/workflows/: docker-build.yml
rust-sqlite-api/: .gitignore  Cargo.toml  README.md
rust-sqlite-api/src/: main.rs
ui/: package-lock.json  package.json  tailwind.config.js  vite.config.js
ui/src/: App.jsx  sync-engine.js
