[package]
name = "rust-sqlite-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3", features = ["rustls"] }
actix-rt = "2.8"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tempfile = "3.7"

[dev-dependencies]
actix-test = "0.1"
reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.4", features = ["v4"] }
